@@ -1,3 +1,8 @@
+2002-04-23  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/cpu/mmix/bits/cpu_limits.h: New file.
+	* configure.target (CPULIMITSH): Use it.
+
 2002-04-22  Loren J. Rittle <ljrittle@acm.org>
 
 	* docs/html/17_intro/porting.texi (_GLIBCPP_AVOID_FSEEK): Remove.
